<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BabyMoz</string>
    <!-- activity -->
    <string name="activity_MainPreferenceActivity_label">Settings</string>
    <string name="activity_AboutActivity_label">About</string>
    <string name="activity_HelpActivity_label">Help</string>
    <!-- menu -->
    <string name="menu_restart_title">Restart</string>
    <string name="menu_about_title">About</string>
    <string name="menu_help_title">Help</string>
    <string name="menu_preferences_title">Settings</string>
    <!-- preference -->
    <string name="preference_audio_title">Audio</string>
    <string name="preference_audio_summary">Enable audio of symbols</string>
    <string name="preference_animation_title">Animation</string>
    <string name="preference_animation_summary">Enable animations of symbols</string>
    <string name="preference_shuffle_title">Shuffle</string>
    <string name="preference_shuffle_summary">Enable random order of symbols</string>
</resources>
