<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
            android:key="audio"
            android:title="@string/preference_audio_title"
            android:summary="@string/preference_audio_summary"
            android:defaultValue="true"/>
    <CheckBoxPreference
            android:key="animation"
            android:title="@string/preference_animation_title"
            android:summary="@string/preference_animation_summary"
            android:defaultValue="true"/>
    <CheckBoxPreference
            android:key="shuffle"
            android:title="@string/preference_shuffle_title"
            android:summary="@string/preference_shuffle_summary"
            android:defaultValue="false"/>
</PreferenceScreen>
